@@ -9,6 +9,8 @@ import com.gazpacho.recipeservice.model.AllergenEntity;
 import com.gazpacho.recipeservice.repository.RecipeRepository;
 import com.gazpacho.recipeservice.service.RecipeService;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -17,8 +19,13 @@ import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static org.mockito.BDDMockito.*;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.then;
 
-public class RecipeServiceTest {
+
+@DisplayName("RecipeService Unit Tests")
+class RecipeServiceTest {
 
   private RecipeRepository recipeRepository;
   private AllergenRepository allergenRepository;
@@ -42,48 +49,72 @@ public class RecipeServiceTest {
 
     when(recipeRepository.findById(testID)).thenReturn(Optional.of(recipe));
 
-    Optional<RecipeEntity> result = recipeService.viewRecipe(testID);
-    assertTrue(result.isPresent());
-    assertEquals("Spaghetti", result.get().getName());
-  }
+    @Nested
+    @DisplayName("viewRecipe()")
+    class ViewRecipe {
+        @Test @DisplayName("returns Optional.of(entity) when found")
+        void found() {
+            RecipeEntity e = new RecipeEntity();
+            e.setId(1L);
+            e.setName("Soup");
+            given(recipeRepository.findById(1L)).willReturn(Optional.of(e));
+            Optional<RecipeEntity> result = recipeService.viewRecipe(1L);
+            assertTrue(result.isPresent());
+            assertEquals("Soup", result.get().getName());
+        }
 
-    @Test
-    void testViewRecipe_NotFound() {
-        long testID = 1L;
-        when(recipeRepository.findById(testID)).thenReturn(Optional.empty());
-        
-        Optional<RecipeEntity> result = recipeService.viewRecipe(testID);
-        assertFalse(result.isPresent());
+        @Test @DisplayName("returns Optional.empty() when missing")
+        void missing() {
+            given(recipeRepository.findById(2L)).willReturn(Optional.empty());
+            Optional<RecipeEntity> result = recipeService.viewRecipe(2L);
+            assertFalse(result.isPresent());
+        }
     }
 
-    @Test
-    void testSearchRecipes_RecipeType() {
-        long testID = 1L;
-        RecipeEntity recipe = new RecipeEntity();
-        recipe.setId(testID);
-        recipe.setName("Spaghetti");
-        when(recipeRepository.findByNameContainingIgnoreCase("spa"))
-                .thenReturn(Collections.singletonList(recipe));
+    @Nested
+    @DisplayName("deleteRecipe()")
+    class DeleteRecipe {
+        @Test @DisplayName("deletes when repo.existsById() is true")
+        void deleteWhenPresent() {
+            given(recipeRepository.existsById(10L)).willReturn(true);
+            // should not throw
+            recipeService.deleteRecipe(10L);
+            then(recipeRepository).should().deleteById(10L);
+        }
 
-        List<RecipeDTO> results = recipeService.searchRecipes("spa", "recipe");
-        assertEquals(1, results.size());
-        assertEquals("Spaghetti", results.get(0).getName());
+        @Test @DisplayName("throws RuntimeException(\"Recipe not found\") when missing")
+        void throwsWhenMissing() {
+            given(recipeRepository.existsById(20L)).willReturn(false);
+            RuntimeException ex = assertThrows(RuntimeException.class, () -> recipeService.deleteRecipe(20L));
+            assertEquals("Recipe not found", ex.getMessage());
+        }
     }
 
-    @Test
-    void testSearchRecipes_IngredientType() {
-        //simulating a recipe with an ingredient whose name contains the query
-        long testID = 2L;
-        RecipeEntity recipe = new RecipeEntity();
-        recipe.setId(testID);
-        recipe.setName("Mac & Cheese");
+    @Nested
+    @DisplayName("searchRecipes(query, type)")
+    class SearchByType {
+        @Test @DisplayName("type=\"recipe\" uses findByNameContainingIgnoreCase")
+        void recipeType() {
+            RecipeEntity e = new RecipeEntity();
+            e.setId(1L);
+            e.setName("Pie");
+            given(recipeRepository.findByNameContainingIgnoreCase("pi")).willReturn(List.of(e));
 
-        IngredientEntity ingredient = new IngredientEntity();
-        ingredient.setId(10L);
-        ingredient.setName("Cheddar Cheese");
-        recipe.getIngredients().add(ingredient);
+            List<RecipeDTO> out = recipeService.searchRecipes("pi", "recipe");
+            assertEquals(1, out.size());
+            assertEquals(1L, out.get(0).getId());
+            assertEquals("Pie", out.get(0).getName());
+        }
 
-        when(recipeRepository.findAll()).thenReturn(Collections.singletonList(recipe));
+        @Test @DisplayName("type=\"ingredient\" filters findAll() by ingredient.name")
+        void ingredientType() {
+            RecipeEntity r = new RecipeEntity();
+            r.setId(2L);
+            r.setName("Mac & Cheese");
+            IngredientEntity ing = new IngredientEntity();
+            ing.setName("Cheddar Cheese");
+            r.getIngredients().add(ing);
+            given(recipeRepository.findAll()).willReturn(List.of(r));
 
         List<RecipeDTO> results = recipeService.searchRecipes("cheese", "ingredient");
         assertEquals(1, results.size());
@@ -108,42 +139,82 @@ public class RecipeServiceTest {
 
         ingredient.getAllergens().add(allergen);
         recipe.getIngredients().add(ingredient);
+            List<RecipeDTO> out = recipeService.searchRecipes("cheese", "ingredient");
+            assertEquals(1, out.size());
+            assertEquals("Cheesy Pasta", out.get(0).getName());
+        }
 
-        when(recipeRepository.findAll()).thenReturn(Collections.singletonList(recipe));
+        @Test @DisplayName("type=\"ingredient\" yields empty when none match")
+        void ingredientTypeNoMatch() {
+            given(recipeRepository.findAll()).willReturn(List.of());
+            List<RecipeDTO> out = recipeService.searchRecipes("any", "ingredient");
+            assertTrue(out.isEmpty());
+        }
 
-        List<RecipeDTO> results = recipeService.searchRecipes("peanut", "allergen");
-        assertEquals(1, results.size());
-        assertEquals("Peanut Pie", results.get(0).getName());
+        @Test @DisplayName("type=\"allergen\" filters findAll() by allergen.name")
+        void allergenType() {
+            RecipeEntity r = new RecipeEntity();
+            r.setId(3L);
+            r.setName("Nutty Cake");
+            IngredientEntity ing = new IngredientEntity();
+            AllergenEntity allergen = new AllergenEntity();
+            allergen.setName("Peanut");
+            ing.getAllergens().add(allergen);
+            r.getIngredients().add(ing);
+
+            given(recipeRepository.findAll()).willReturn(List.of(recipe));
+
+            List<RecipeDTO> out = recipeService.searchRecipes("peanut", "allergen");
+            assertEquals(1, out.size());
+            assertEquals("Nutty Cake", out.get(0).getName());
+        }
+
+        @Test @DisplayName("type=\"allergen\" yields empty when none match")
+        void allergenTypeNoMatch() {
+            given(recipeRepository.findAll()).willReturn(List.of());
+            List<RecipeDTO> out = recipeService.searchRecipes("none", "allergen");
+            assertTrue(out.isEmpty());
+        }
+
+        @Test @DisplayName("unknown type falls back to recipe search")
+        void unknownTypeFallback() {
+            RecipeEntity e = new RecipeEntity();
+            e.setId(4L);
+            e.setName("Fallback Stew");
+            given(recipeRepository.findByNameContainingIgnoreCase("foo"))
+                .willReturn(List.of(e));
+
+            List<RecipeDTO> out = recipeService.searchRecipes("foo", "whoknows");
+            assertEquals(1, out.size());
+            assertEquals("Fallback Stew", out.get(0).getName());
+        }
     }
 
-    @Test
-    void testSearchRecipes_UnknownTypeFallsBack() {
-        //check for unknown type
-        long testID = 4L;
-        RecipeEntity recipe = new RecipeEntity();
-        recipe.setId(testID);
-        recipe.setName("Chicken Alfredo");
-        when(recipeRepository.findByNameContainingIgnoreCase("alfredo"))
-                .thenReturn(Collections.singletonList(recipe));
+    @Nested
+    @DisplayName("searchRecipes(query) — overloaded default")
+    class DefaultSearch {
+        @Test @DisplayName("delegates to searchRecipes(query, \"recipe\")")
+        void defaultDelegates() {
+            RecipeEntity e = new RecipeEntity();
+            e.setId(5L);
+            e.setName("Default Dish");
+            // stub the two-arg method
+            given(recipeRepository.findByNameContainingIgnoreCase("def"))
+                .willReturn(List.of(e));
 
-        List<RecipeDTO> results = recipeService.searchRecipes("alfredo", "unknown");
-        assertEquals(1, results.size());
-        assertEquals("Chicken Alfredo", results.get(0).getName());
+            // call the one-arg overload
+            List<RecipeDTO> out = recipeService.searchRecipes("def");
+            assertEquals(1, out.size());
+            assertEquals(5L, out.get(0).getId());
+        }
+
+        @Test @DisplayName("returns empty list when no matches for default search")
+        void defaultEmpty() {
+            given(recipeRepository.findByNameContainingIgnoreCase("missing"))
+                .willReturn(Collections.emptyList());
+            List<RecipeDTO> out = recipeService.searchRecipes("missing");
+            assertTrue(out.isEmpty());
+        }
     }
-    
-    @Test
-    void testSearchRecipes_DefaultSearch() {
-        //check that the overloaded default is be used here
-        long testID = 1L;
-        RecipeEntity recipe = new RecipeEntity();
-        recipe.setId(testID);
-        recipe.setName("Spaghetti");
-
-        when(recipeRepository.findByNameContainingIgnoreCase("spa"))
-                .thenReturn(Collections.singletonList(recipe));
-
-    List<RecipeDTO> results = recipeService.searchRecipes("spa");
-    assertEquals(1, results.size());
-    assertEquals("Spaghetti", results.get(0).getName());
-  }
+}
 }
